# OthelloAI

./: .gitignore  Minimax.py  Minmax.py  MonteCarlo.py  README.md  board.py  main.py  pyproject.toml  test.py
