[tool.poetry]
name = "othelloai"
version = "0.1.0"
description = ""
authors = ["Bouhdid Wassim", "Leila Bourouf", "Maxime Van den Broeck"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11"
pygame = ">=2.6.1,<3.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

